ml_models/configs/logging_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  description: Namespace para sistema de logging
  labels:
    app: apostapro
    component: logging
  name: logging
