ml_models/configs/monitoring_namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  description: Namespace para ferramentas de monitoramento
  labels:
    app: apostapro
    component: monitoring
  name: monitoring
