ml_models/configs/data_validation_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data_validation-deployment
  namespace: apostapro-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data_validation
  template:
    metadata:
      labels:
        app: data_validation
    spec:
      containers:
      - env:
        - name: ML_ENV
          value: production
        - name: DEBUG
          value: 'false'
        - name: LOG_LEVEL
          value: WARNING
        image: apostapro/data_validation:1.0.0
        name: data_validation
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
