ml_models/configs/ml_training_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml_training-deployment
  namespace: apostapro-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ml_training
  template:
    metadata:
      labels:
        app: ml_training
    spec:
      containers:
      - env:
        - name: ML_ENV
          value: production
        - name: DEBUG
          value: 'false'
        - name: LOG_LEVEL
          value: WARNING
        image: apostapro/ml_training:1.0.0
        name: ml_training
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
