ml_models/configs/model_deployment_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model_deployment-deployment
  namespace: apostapro-ml
spec:
  replicas: 1
  selector:
    matchLabels:
      app: model_deployment
  template:
    metadata:
      labels:
        app: model_deployment
    spec:
      containers:
      - env:
        - name: ML_ENV
          value: production
        - name: DEBUG
          value: 'false'
        - name: LOG_LEVEL
          value: WARNING
        image: apostapro/model_deployment:1.0.0
        name: model_deployment
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 500m
            memory: 1Gi
          requests:
            cpu: 250m
            memory: 512Mi
