ml_models/configs/data_validation_service.yml
apiVersion: v1
kind: Service
metadata:
  name: data_validation-service
  namespace: apostapro-ml
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: data_validation
  type: ClusterIP
