ml_models/configs/ml-inference-service_service.yml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  name: ml-inference-service
  namespace: apostapro-ml
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: ml-inference
  type: ClusterIP
