ml_models/configs/performance_monitoring_service.yml
apiVersion: v1
kind: Service
metadata:
  name: performance_monitoring-service
  namespace: apostapro-ml
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: performance_monitoring
  type: ClusterIP
