ml_models/configs/ml-api-ingress_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  name: ml-api-ingress
  namespace: apostapro-ml
spec:
  rules:
  - host: api.apostapro.com
    http:
      paths:
      - backend:
          service:
            name: ml-api-service
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - api.apostapro.com
    secretName: apostapro-tls
